Bug: #2584 - Long line of text in structured report is cut off
- White space wrapping enabled for read-only cells.

--- a/Ris/web/css/default.css
+++ b/Ris/web/css/default.css
@@ -211,6 +211,7 @@ a.collapsibleHeading {
 	font-style: italic;
 	padding-top:0.3em;
     padding-bottom:0.18em;
+	white-space: normal;
 }
 
 #patientNotesTable .checkedDivCell {
